--- a/backend-django/twitterApi/templates/base.html
+++ b/backend-django/twitterApi/templates/base.html
@@ -8,17 +8,22 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
+      <style>
+          .bg-tweetme {
+              background-color: #8e1f1f !important;
+          }
+      </style>
     <title>Tweet Me</title>
   </head>
   <body>
 
   {% include "common/navbar.html" %}
 
-    <div class="container-fluid">
+    <div class="container">
         {% block content %}{% endblock %}
     </div>
 
-  {% include "common/footer.html" %}
+{#  {% include "common/footer.html" %}#}
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
