--- a/backend-django/twitterApi/templates/pages/home.html
+++ b/backend-django/twitterApi/templates/pages/home.html
@@ -7,11 +7,69 @@
         </div>
     </div>
 
+    {#  tweet form   #}
+    <div class="row mb-3">
+        <div class="col-md-4 mx-auto col-10">
+            <form class="form" id="tweet-create-from" action="/create-tweet" method="post">
+                {% csrf_token %}
+                <input type="hidden" value="/" name="next">
+                <textarea class="form-control" name="content" placeholder="share your thought"></textarea>
+                <button type="submit" class="btn btn-primary mt-1">Tweet</button>
+            </form>
+        </div>
+    </div>
+
     <div class="row" id="tweets">
         Loading....
     </div>
 
     <script>
+        const tweetsEl = document.getElementById("tweets");
+        const tweetCreateFromEl = document.getElementById("tweet-create-from");
+
+        tweetCreateFromEl.addEventListener("submit", function (event) {
+            event.preventDefault();
+            const myform = event.target;
+            const myFormData = new FormData(myform);
+            const url = myform.getAttribute("action");
+            const method = myform.getAttribute("method");
+
+            const xhr = new XMLHttpRequest();
+            xhr.responseType = "json";
+            xhr.open(method, url);
+            xhr.setRequestHeader("HTTP_X_REQUESTED_WITH", "XMLHttpRequest");
+            xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest");
+            xhr.onload = function () {
+                if(xhr.status === 201){
+                    const newTweetJson = xhr.response;
+                    const newTweetElement = formatTweetElement(newTweetJson);
+                    const ogHtml = tweetsEl.innerHTML;
+                    tweetsEl.innerHTML = newTweetElement + ogHtml;
+                }
+            };
+            xhr.send(myFormData);
+        });
+
+        function loadTweet(tweetElement) {
+            const xhr = new XMLHttpRequest();
+            const method = "Get";
+            const url = "/tweets";
+
+            xhr.responseType = "json";
+            xhr.open(method, url);
+            xhr.onload = function () {
+                const listedItem = xhr.response.response;
+                let finalTweetStr = "";
+                for (let i = 0; i < listedItem.length; i++) {
+                    let currentItem = formatTweetElement(listedItem[i]);
+                        finalTweetStr += currentItem;
+                }
+                tweetElement.innerHTML = finalTweetStr;
+            };
+            xhr.send();
+        }
+
+        loadTweet(tweetsEl);
 
         function handleLike(tweet_id, currentCount) {
             console.log("id = " + tweet_id);
@@ -19,32 +77,13 @@
         }
 
         function LikeBtn(tweet) {
-            return "<button class='btn btn-primary' onclick='handleLike(" + tweet.id + "," + tweet.likes + ")'><span class='small'>"+tweet.likes+"</span>  Like</button>";
+            return "<button class='btn btn-primary' onclick='handleLike(" + tweet.id + "," + tweet.likes + ")'><span class='small'>" + tweet.likes + "</span>  Like</button>";
         }
 
-        const tweetsElement = document.getElementById("tweets");
-
-        const xhr = new XMLHttpRequest();
-        const method = "Get";
-        const url = "/tweets";
-
-        xhr.responseType = "json";
-        xhr.open(method, url);
-        xhr.onload = function () {
-
-            const listedItem = xhr.response.response;
-            let finalTweetStr = "";
-            for (let i = 0; i < listedItem.length; i++) {
-                let currentItem = "<div class='col-12 col-md-10 mx-auto border rounded py-3 mb-4 tweet-" + listedItem[i].id + "'> " +
-                    "<p> " + listedItem[i].content + "</p> " +
-                    "<div class='btn-group'>" + LikeBtn(listedItem[i]) + "</div></div>";
-                finalTweetStr += currentItem;
-            }
-
-            tweetsElement.innerHTML = finalTweetStr;
-        };
-
-        xhr.send();
-
+        function formatTweetElement(tweet) {
+            return "<div class='col-12 col-md-10 mx-auto border rounded py-3 mb-4 tweet-" + tweet.id + "'> " +
+                "<p> " + tweet.content + "</p> " +
+                "<div class='btn-group'>" + LikeBtn(tweet) + "</div></div>";
+        }
     </script>
 {% endblock %}
